fixed overflow issue

--- a/K72YT/src/index.css
+++ b/K72YT/src/index.css
@@ -3,4 +3,7 @@
 body{
   overflow-x: hidden;
   background-color: black;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
